# kev-says

./: .gitignore
src/: CMakeLists.txt  board.c  board.h  debug.c  debug.h  main.c  spi_ops.c  spi_ops.h  system_defs.h
src/be/: be.c  be.h
src/cmt/: cmt.c  cmt.h  core1_main.c  core1_main.h  multicore.c  multicore.h
src/ui/: CMakeLists.txt  ui.c  ui.h  ui_disp.c  ui_disp.h
src/ui/display/: CMakeLists.txt  display.c  display.h  display_i.h  font_10_16.c
src/ui/display/ili_lcd_spi/: CMakeLists.txt  display_ili.c  ili_lcd_spi.c  plot.c  plot.h
src/util/: util.h
